[tool.poetry]
name = "siamesenn"
version = "0.1.0"
description = "Siamese neural network for image similarity."
authors = ["Juraj Zelman <zelman.juraj@gmail.com>"]
packages = [{include = "<siamesenn>"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
mypy = "^1.0.0"
pandas-stubs = "^1.5.3.230203"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
safe = true

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 80

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B311"]
